--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.0", features = ["derive"] }
+dotenv = "0.15"
